--- a/assets/config.yaml
+++ b/assets/config.yaml
@@ -1,12 +1,12 @@
 server:
   address: :8080
-  static: /home/ash/projects/bean/js
+  static: /var/www/bean/static
 
 analysis:
-  rules: /home/ash/projects/bean/assets/rules.yaml
+  rules: /etc/bean/rules.yaml
   token: token
   traces_length: 10
   traces_ttl: 10m
 
 logger:
-  level: debug
+  level: info
