--- a/assets/rules.yaml
+++ b/assets/rules.yaml
@@ -1,11 +1,7 @@
-- when: mouseMoves == 0 && clicks == 0
+- when: mouseMoves <= 20 && clicks >= 10
   then:
-      ai: 0.1
-      human: 0.2
-      scraper: -0.2
+    autiomation: 0.1
 
-- when: mouseMoves <= 10 && clicks == 0
+- when: mouseMoves > 20 && clicks < 10
   then:
-      ai: -0.1
-      human: 0.2
-      scraper: -0.2
+    autiomation: -0.1
